navy tech FINISHED

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1253,3 +1253,9 @@ securization;Securization;;;;;;;;;;;;;x
 securization_desc;Hedge funds may invest in securitized products, which are financial instruments created by pooling together various assets such as mortgages, credit card debt, or other loans. The development of securitization has led to increased liquidity in the banking system and allowed banks to free up capital.;;;;;;;;;;;;;x
 reduced_intervention;Reduced Interventionism;;;;;;;;;;;;;x
 reduced_intervention_desc;Market-determined exchange rates can reduce the need for government intervention in currency markets, as there is less pressure to maintain fixed exchange rate regimes. This can help to reduce the costs associated with currency interventions and increase transparency in financial markets.;;;;;;;;;;;;;x
+naval_literacy_programs;Literacy Programs;;;;;;;;;;;;;x
+literacy_programs_desc;Literacy programs were developed to ensure that soldiers were able to read and write, which was seen as essential for effective communication and military intelligence.;;;;;;;;;;;;;x
+naval_manual_of_arms;Manual of Arms;;;;;;;;;;;;;x
+naval_manual_of_arms_desc;The Manual of Arms is an essential part of military training, and soldiers have to learn a specific set of movements to handle their weapons safely and effectively.;;;;;;;;;;;;;x
+grand_fleet_doctrine;Grand Fleet Doctrine;;;;;;;;;;;;;x
+grand_fleet_doctrine_desc;Grand Fleet Doctrine;;;;;;;;;;;;;x
