--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -401,3 +401,7 @@ network_centric_warfare;Network-Centric Warfare;;;;;;;;;;;;;x
 network_centric_warfare_desc;Network-Centric Warfare;;;;;;;;;;;;;x
 naval_welding;Naval Welding;;;;;;;;;;;;;x
 naval_welding_desc;Naval Welding;;;;;;;;;;;;;x
+naval_culture;Naval Culture and Tradition;;;;;;;;;;;;;x
+naval_culture_desc;Naval Culture and Tradition;;;;;;;;;;;;;x
+grand_fleet;The Grand Fleet;;;;;;;;;;;;;x
+grand_fleet_desc;The Grand Fleet;;;;;;;;;;;;;x
