--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -4010,7 +4010,7 @@ LSK_proletarian_dictatorship;Alaskan Communist Republic;x;
 LSK_presidential_dictatorship;Republic of Alaska;x;
 LSK_bourgeois_dictatorship;Republic of Alaska;x;
 LSK_fascist_dictatorship;Alaskan State of the North;x;
-LSK_colonial_company;Protectorate of Alaska;x;
+LSK_colonial_company;Russkaya Amyerika;x;
 LSK_rus_colonial_company;Russkaya Amyerika;x;
 LSK_dominion;Protectorate of Alaska;x;
 LSK_ADJ;Alaskan;x;
@@ -5387,7 +5387,7 @@ POL_prussian_constitutionalism;Królestwo Polski;x;
 POL_hms_government;Królestwo Polski;x;
 POL_democracy;Rzeczpospolita Polska;x;
 POL_proletarian_dictatorship;Polska Rzeczpospolita Ludowa;x;
-POL_presidential_dictatorship;Rzeczpospolita Polska;x;
+POL_presidential_dictatorship;Tymczasowy Rzad Narodowy;x;
 POL_bourgeois_dictatorship;Rzeczpospolita Polska;x;
 POL_fascist_dictatorship;Panstwo Polskie;x;
 POL_colonial_company;Protektorat Polski;x;
@@ -5782,6 +5782,9 @@ RUS_absolute_empire;Rossiyskaya Imperiya;x;
 RUS_absolute_monarchy;Rossiyskaya Imperiya;x;
 RUS_prussian_constitutionalism;Rossiyskaya Imperiya;x;
 RUS_hms_government;Rossiyskaya Imperiya;x;
+RUS_absolute_monarchy2;Rossiyskaya Imperiya;x;
+RUS_prussian_constitutionalism2;Rossiyskaya Imperiya;x;
+RUS_hms_government2;Rossiyskaya Imperiya;x;
 RUS_democracy;Rossiyskaya Respublika;x;
 RUS_proletarian_dictatorship;Rossíyskaya Sovétskaya Federatívnaya Socialistíceskaya Respúblika;x;
 RUS_presidential_dictatorship;Rossiyskaya Federatsiya;x;
@@ -7237,7 +7240,7 @@ UNB_proletarian_dictatorship;The Coloradan Socialist Federal Republic.;x;
 UNB_presidential_dictatorship;The Coloradan Federation;x;
 UNB_bourgeois_dictatorship;The Coloradan Federation;x;
 UNB_fascist_dictatorship;The Coloradan Federation;x;
-UNB_colonial_company;State of Colorado;x;
+UNB_colonial_company;US Unorganized Territories;x;
 UNB_dominion;State of Colorado;x;
 UNB_ADJ;Coloradan;x;
 ##### UNM #####;
