--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1446,7 +1446,7 @@ UNB_absolute_monarchy;Kingdom of Colorado;;;;;;;;;;;;;x
 UNB_dominion;Territory of Jefferson;;;;;;;;;;;;;x
 UNB_hms_government;Colorado Commonwealth;;;;;;;;;;;;;x
 UNB_prussian_constitutionalism;Kingdom of Colorado;;;;;;;;;;;;;x
-UNB_colonial_company;U.S. Unorganized Territories;;;;;;;;;;;;;x
+UNB_colonial_company;US Unorganized Territories;;;;;;;;;;;;;x
 UNM_absolute_monarchy;New Mexico;;;;;;;;;;;;;x
 UNM_colonial_company;La Florida Occidental;;;;;;;;;;;;;x
 UNM_democracy;Apache Nation;;;;;;;;;;;;;x
