--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1430,8 +1430,9 @@ austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will 
 prussian_military;Prussian Military;;;;;;;;;;;;;x
 decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
 decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
-caliph_powerless_figurehead;Caliph Powerless Figurhead;;;;;;;;;;;;;x
-border_clashes;Colonist Border Clash;;;;;;;;;;;;;x
+decadent_autocracy2;Highly Decadent Autocracy;;;;;;;;;;;;;x
+decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy and may burst at any moment;;;;;;;;;;;;;x
+border_clashes;Colonial Border Clashes;;;;;;;;;;;;;x
 redemption_payments;Redemption Payments;;;;;;;;;;;;;x
 redemption_payments_desc;Former Serf subjects are paying us back the money they borrowed with interest to buy land from aristocracy;;;;;;;;;;;;;x
 population_20mil;Population: 20 Million, Coffers: 1,000,000;;;;;;;;;;;;;x
@@ -1453,3 +1454,27 @@ infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
 more_colonial_settlement;Active Colonial Campaign;;;;;;;;;;;;;x
 less_emigration;Active Anti-Emigration Campaign;;;;;;;;;;;;;x
 less_emigration_desc;We are actively trying to keep our citizens in our country with better pay and jobs;;;;;;;;;;;;;x
+renovated_hagia_sophia;The Church of Hagia Sophia;;;;;;;;;;;;;x
+renovated_hagia_sophia_desc;Renovated and reconsecrated, it yet again stands the grandest Church in the World;;;;;;;;;;;;;x
+constantinople_patriarchate;Spiritual Center of Orthodoxy;;;;;;;;;;;;;x
+constantinople_patriarchate_desc;With Hagia Sophia restored to Orthodoxy, Ecumenical Patriarchate of Constantinople is yet again a focal point of religious affairs within Orthodox Christianity.;;;;;;;;;;;;;x
+bosnian_question;The Bosnian Question;;;;;;;;;;;;;x
+free_economic_society;Free Economic Society for the Encouragement of Agriculture and Husbandry;;;;;;;;;;;;;x
+free_economic_society_desc;Free Economic Society represents a Bulwark of Liberalism in the Russian Empire;;;;;;;;;;;;;x
+capital_of_the_motherland;Capital of the Motherland;;;;;;;;;;;;;x
+popov_tea_company;Popov's Tea Company;;;;;;;;;;;;;x
+win_or_die_oe;Win or Die;;;;;;;;;;;;;x
+turk_revolt;Turkish Nationalist Revolt;;;;;;;;;;;;;x
+caliph_powerless_figurehead;Caliph is a Powerless Figurehead;;;;;;;;;;;;;x
+caliph_powerless_figurehead_desc;Caliph is a joke for our people, the real power lies with the Tsar;;;;;;;;;;;;;x
+tsars_puppet;Tsar's Puppet
+tsars_puppet_desc;Our Caliph is nothing more than a Petrogradian Toy;;;;;;;;;;;;;x
+humiliated_ottoman_caliph;Humiliated Ottoman Caliph;;;;;;;;;;;;;x
+humiliated_ottoman_caliph_desc;The Caliph is Humiliated;;;;;;;;;;;;;x
+russian_menace;Russian Menace;;;;;;;;;;;;;x
+russian_menace_desc;We must militarize our society in order to defend against the Russian Bear;;;;;;;;;;;;;x
+outraged_europe_rus;Europe is Outraged;;;;;;;;;;;;;x
+outraged_europe_rus_desc;Our actions have caused alarm in all European capitals and our isolation is all but certain;;;;;;;;;;;;;x
+cpl_boom;Polish Industrial Boom;;;;;;;;;;;;;x
+cpl_boom_desc;Polish Industry is Booming;;;;;;;;;;;;;x
+cpl_boom_city;Polish Industrial Boom;;;;;;;;;;;;;x
