--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1467,7 +1467,7 @@ win_or_die_oe;Win or Die;;;;;;;;;;;;;x
 turk_revolt;Turkish Nationalist Revolt;;;;;;;;;;;;;x
 caliph_powerless_figurehead;Caliph is a Powerless Figurehead;;;;;;;;;;;;;x
 caliph_powerless_figurehead_desc;Caliph is a joke for our people, the real power lies with the Tsar;;;;;;;;;;;;;x
-tsars_puppet;Tsar's Puppet
+tsars_puppet;Tsar's Puppet;;;;;;;;;;;;;x
 tsars_puppet_desc;Our Caliph is nothing more than a Petrogradian Toy;;;;;;;;;;;;;x
 humiliated_ottoman_caliph;Humiliated Ottoman Caliph;;;;;;;;;;;;;x
 humiliated_ottoman_caliph_desc;The Caliph is Humiliated;;;;;;;;;;;;;x
