proper french dominion status

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -416,6 +416,7 @@ EZO_presidential_dictatorship;Republic of Ezo;;;;;;;;;;;;;x
 EZO_proletarian_dictatorship;People’s Republic of Ezo;;;;;;;;;;;;;x
 FAS_colonial_company;Dominion d'Australie;;;;;;;;;;;;;x
 FAS_dominion;Dominion d'Australie;;;;;;;;;;;;;x
+FAS_dominion;Dominion d'Australie;;;;;;;;;;;;;x
 FCA_colonial_company;Dominion du Canada;;;;;;;;;;;;;x
 FCA_dominion;Dominion du Canada;;;;;;;;;;;;;x
 FIN_absolute_monarchy;Kingdom of Finland;;;;;;;;;;;;;x
@@ -1436,7 +1437,7 @@ ULA_absolute_monarchy;Dominion de Louisiane;;;;;;;;;;;;;x
 ULA_bourgeois_dictatorship;Louisiane Republique;;;;;;;;;;;;;x
 ULA_colonial_company;La Louisiane;;;;;;;;;;;;;x
 ULA_democracy;Louisiane;;;;;;;;;;;;;x
-ULA_dominion;Louisiana Territory;;;;;;;;;;;;;x
+ULA_dominion;Dominion de Louisiane;;;;;;;;;;;;;x
 ULA_fascist_dictatorship;Louisiane Republique;;;;;;;;;;;;;x
 ULA_hms_government;Dominion de Louisiane;;;;;;;;;;;;;x
 ULA_presidential_dictatorship;Louisiane Republique;;;;;;;;;;;;;x
@@ -1446,7 +1447,7 @@ UNB_absolute_monarchy;Kingdom of Colorado;;;;;;;;;;;;;x
 UNB_dominion;Territory of Jefferson;;;;;;;;;;;;;x
 UNB_hms_government;Colorado Commonwealth;;;;;;;;;;;;;x
 UNB_prussian_constitutionalism;Kingdom of Colorado;;;;;;;;;;;;;x
-UNB_colonial_company;US Unorganized Territories;;;;;;;;;;;;;x
+UNB_colonial_company;U.S. Unorganized Territories;;;;;;;;;;;;;x
 UNM_absolute_monarchy;New Mexico;;;;;;;;;;;;;x
 UNM_colonial_company;La Florida Occidental;;;;;;;;;;;;;x
 UNM_democracy;Apache Nation;;;;;;;;;;;;;x
