--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1478,3 +1478,4 @@ outraged_europe_rus_desc;Our actions have caused alarm in all European capitals 
 cpl_boom;Polish Industrial Boom;;;;;;;;;;;;;x
 cpl_boom_desc;Polish Industry is Booming;;;;;;;;;;;;;x
 cpl_boom_city;Polish Industrial Boom;;;;;;;;;;;;;x
+francophy_the_rhine;Francophy the Rhine;;;;;;;;;;;;;x
