--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1479,3 +1479,4 @@ cpl_boom;Polish Industrial Boom;;;;;;;;;;;;;x
 cpl_boom_desc;Polish Industry is Booming;;;;;;;;;;;;;x
 cpl_boom_city;Polish Industrial Boom;;;;;;;;;;;;;x
 francophy_the_rhine;Francophy the Rhine;;;;;;;;;;;;;x
+recently_reformed_local_government;Recently reformed local government;;;;;;;;;;;;;x
