--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -74,6 +74,11 @@ override_override_more_colonial_settlement_remove_title;Stop Colonial Settlement
 override_less_emigration_desc;Start a campaign to actively promote to our citizens better living conditions and pay at home, rather than emigrating overseas;;;;;;;;;;;;;x
 override_less_emigration_title;Start an Anti-Emigration Campaign;;;;;;;;;;;;;x
 override_less_emigration_remove_title;Stop the Anti-Emigrationg Campaign;;;;;;;;;;;;;x
+override_less_emigration_remove_desc;This will stop the Emigration Campaign;;;;;;;;;;;;;x
+override_more_internal_title;Start Internal Migration Campaign;;;;;;;;;;;;;x
+override_more_internal_desc;This will increase the number of people moving from state to state provinces within your country.;;;;;;;;;;;;;x
+override_more_internal_remove_title;Stop Internal Migration Campaign;;;;;;;;;;;;;x
+override_more_internal_remove_desc;This will stop Internal Migration campaign.;;;;;;;;;;;;;x
 override_faster_infamy_removal_title;Commence a Diplomatic Offensive;;;;;;;;;;;;;x
 override_faster_infamy_removal_desc;Instruct our Foreign Minister to commence a campaign to improve our standing in the world;;;;;;;;;;;;;x
 override_faster_infamy_removal_remove_title;Stop Diplomatic Efforts;;;;;;;;;;;;;x
