PR Byzantium Refactor: Fix, Rebalance and Revamp Pasx70

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -69,6 +69,10 @@ claim_holy_land;Claim the Levant;Prendre territoire cl?Kernprovinz erwerben;;;;;
 claim_holy_land_desc;Acquire a state in the §YLevant§W now that it has been abandoned by the §YOttoman Empire§W;Prendre un §YÉtat§W ennemi o?nous avons des §Yprovinces principales§W;Erobern Sie einen feindlichen §YStaat§W, in dem wir §YKernprovinzen§W haben.;;;;;;;;;;;x
 claim_holy_land_setup;Acquire $STATE$ from $RECIPIENT$;Prendre État cl?$STATE$ de $RECIPIENT$;Kern-$STATE$ von $RECIPIENT$ erwerben;;;;;;;;;;;x
 claim_holy_land_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erwerben;;;;;;;;;;;x
+reclaim_the_empire;Restore Imperial Province;Unifier la nation;Einen Sie die Nation!;;;;;;;;;;;x
+reclaim_the_empire_desc;Acquire a state that belonged to the Empire;;;;;;;;;;;x
+reclaim_the_empire_setup;Acquire $STATE$ from $RECIPIENT$;Prendre État cl?$STATE$ de $RECIPIENT$;Kern-$STATE$ von $RECIPIENT$ erwerben;;;;;;;;;;;x
+reclaim_the_empire_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erwerben;;;;;;;;;;;x
 colonial_competition;Enforce colonial claim;;Koloniale Ansprüche druchsetzen;;;;;;;;;;;x
 colonial_competition_desc;Acquire a §Ycolonial region§!;;Erhalte §YKoloniale Region§!;;;;;;;;;;;x
 colonial_competition_setup;Acquire colony $REGION$;;Erhalte die Kolonie $REGION$;;;;;;;;;;;x
