--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -88,6 +88,7 @@ AGRESSION_WAR_FREE_BALKANS_NAME;The $ORDER$$FIRST$–$SECOND$ War of the Balkans;;
 AGRESSION_WAR_FREE_NAME;$ORDER$$FIRST$ War of Propping up $COUNTRY$;$ORDER$$FIRST$ guerre de soutien de $COUNTRY$;$ORDER$$FIRST$ Krieg zur Absicherung von $COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_GUNBOAT_NAME;Gunboat Diplomacy;;;;;;;;;;;;;x
 AGRESSION_WAR_HOLY_LAND_NAME;The $ORDER$$FIRST$–$SECOND$ Levantine War;;;;;;;;;;;;;x
+AGRESSION_WAR_RECLAIM_THE_EMPIRE_NAME;The $ORDER$$FIRST$–$SECOND$ Imperial Restoratian War;;;;;;;;;;;;;x
 AGRESSION_WAR_HUMILIATE_NAME;$ORDER$$FIRST$ War to Humiliate $SECOND$;$ORDER$ guerre pour l'honneur $FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Krieg der Ehre;;;;;;;;;;;x
 AGRESSION_WAR_HUMILIATE_NAME_AUS_FRA;The Rhine Crisis;;;;;;;;;;;;;x
 AGRESSION_WAR_HUMILIATE_NAME_ENG_ETH;British Expedition to Abyssinia;;;;;;;;;;;;;x
@@ -295,6 +296,7 @@ NORMAL_WAR_GUNBOAT_NAME;$ORDER$$FIRST$ intervention in $SECOND_COUNTRY$;$ORDER$$
 NORMAL_WAR_GUNBOAT_NAME_ENG_CHI;$ORDER$Opium War;$ORDER$ guerre de l'opium;$ORDER$Opiumkrieg;;;;;;;;;;;x
 NORMAL_WAR_GUNBOAT_NAME_FRA_MEX;$ORDER$Pastry War;$ORDER$ guerre de la pâtisserie;$ORDER$Kuchenkrieg;;;;;;;;;;;x
 NORMAL_WAR_HOLY_LAND_NAME;The $ORDER$$FIRST$–$SECOND$ Levantine War;;;;;;;;;;;;;x
+NORMAL_WAR_RECLAIM_THE_EMPIRE_NAME;The $ORDER$$FIRST$–$SECOND$ Imperial Restoration War;;;;;;;;;;;;;x
 NORMAL_WAR_HUMILIATE_NAME;$ORDER$$FIRST$–$SECOND$ War of Honour;$ORDER$ guerre pour l'honneur $FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Krieg der Ehre;;;;;;;;;;;x
 NORMAL_WAR_HUMILIATE_NAME_AUS_FRA;The Rhine Crisis;;;;;;;;;;;;;x
 NORMAL_WAR_HUMILIATE_NAME_BAM_FRA;The French Conquest of Soudan;;;;;;;;;;;;;x
