ma bois karamanlides

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -199,6 +199,8 @@ accademia_della_crusca_desc;The Academy of the Crusca, the most prestigious cent
 accademia_della_crusca_title;Accademia della Crusca;;;;;;;;;;;;;x
 accept_armenians_desc;Armenians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
 accept_armenians_title;Accept the Armenians;;;;;;;;;;;;;x
+accept_karamanlides_desc;Karamanlides proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_karamanlides_title;Accept the Karamanlides;;;;;;;;;;;;;x
 accepting_the_slovaks_desc;Accepting the Slovakian minority as Hungarians would go a long way towards fixing our ethnic troubles.;;;;;;;;;;;;;x
 accepting_the_slovaks_title;Accepting the Slovaks;;;;;;;;;;;;;x
 accepting_walloon_people_desc;The Wallonians are restless and desire a say in government, at this point we have little choice but to let them have their way if we want to keep them under our control.;;;;;;;;;;;;;x
