Crimea bugfix and Byz content

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1488,3 +1488,4 @@ destiny_fullfiled;Destiny Fullfiled.;;;;;;;;;;;;;x
 destiny_fullfiled_desc;We have achieved our destiny reaching heights a few years ago only imaginable in the wildest dreams of hopeless romantics.;;;;;;;;;;;;;x
 universal_imperium;Universal Empire;;;;;;;;;;;;;x
 universal_imperium_desc;Our Empire has Unified its two ancestral mandates and has claimed dominion over mankind. The lands that are not yet under our rule soon will be.;;;;;;;;;;;;;x
+renovated_constantinople;Renovated City of World's Desire;;;;;;;;;;;;;x
