--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1490,4 +1490,4 @@ universal_imperium;Universal Empire;;;;;;;;;;;;;x
 universal_imperium_desc;Our Empire has Unified its two ancestral mandates and has claimed dominion over mankind. The lands that are not yet under our rule soon will be.;;;;;;;;;;;;;x
 renovated_constantinople;Renovated City of World's Desire;;;;;;;;;;;;;x
 metternich;Klemens von Metternich;;;;;;;;;;;;;x
-metternich_desc;At the center of Concert of Europe stands its chief architect, Prince Metternich. Heavily conservative and anti-revolutionary, he is determined to retain Habsburg Absolutism and Europe's status quo;;;;;;;;;;;;;x
+metternich_desc;At the center of Concert of Europe stands its chief architect, Prince Metternich. Heavily conservative and anti-revolutionary, he is determined to retain Habsburg Absolutism and Europe's status quo.;;;;;;;;;;;;;x
