Manchuria Bugfix, Loc fix, new override campaign

--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -56,3 +56,6 @@ rossiskiy_kalyforniya;Signed Treaty of San Francisco;;;;;;;;;x
 snatch_oregon_rus;Seized Oregon coast by decision;;;;;;;;;x
 initiated_mordvinov_plan;Settled Serfs in California - Mordvinov Plan;;;;;;;;;x
 war_for_california;Went to war over California;;;;;;;;;x
+mongolian_protectorate;Mongolia is our Protectorate;;;;;;;;;x
+build_the_manchurian_railway1;Manchurian Railway has been finished;;;;;;;;;x
+convention_of_peking;Convention of Peking has Happened;;;;;;;;;x
