--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1431,7 +1431,7 @@ prussian_military;Prussian Military;;;;;;;;;;;;;x
 decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
 decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
 decadent_autocracy2;Highly Decadent Autocracy;;;;;;;;;;;;;x
-decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy and may burst at any moment;;;;;;;;;;;;;x
+decadent_autocracy2_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy and may burst at any moment;;;;;;;;;;;;;x
 border_clashes;Colonial Border Clashes;;;;;;;;;;;;;x
 redemption_payments;Redemption Payments;;;;;;;;;;;;;x
 redemption_payments_desc;Former Serf subjects are paying us back the money they borrowed with interest to buy land from aristocracy;;;;;;;;;;;;;x
@@ -1480,6 +1480,7 @@ cpl_boom_desc;Polish Industry is Booming;;;;;;;;;;;;;x
 cpl_boom_city;Polish Industrial Boom;;;;;;;;;;;;;x
 francophy_the_rhine;Francophy the Rhine;;;;;;;;;;;;;x
 recently_reformed_local_government;Recently reformed local government;;;;;;;;;;;;;x
+recently_reformed_local_government_desc;Recently reformed local government;;;;;;;;;;;;;x
 religious_resurgence;Religious Resurgence;;;;;;;;;;;;;x
 religious_resurgence_desc;We have achieved our religious goals and our faith is resurging as a result.;;;;;;;;;;;;;x
 cultural_revival;Cultural Revival.;;;;;;;;;;;;;x
@@ -1491,3 +1492,5 @@ universal_imperium_desc;Our Empire has Unified its two ancestral mandates and ha
 renovated_constantinople;Renovated City of World's Desire;;;;;;;;;;;;;x
 metternich;Klemens von Metternich;;;;;;;;;;;;;x
 metternich_desc;At the center of Concert of Europe stands its chief architect, Prince Metternich. Heavily conservative and anti-revolutionary, he is determined to retain Habsburg Absolutism and Europe's status quo.;;;;;;;;;;;;;x
+research_campaign;Active Research Campaign;;;;;;;;;;;;;x
+research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country;;;;;;;;;;;;;x
