--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -59,3 +59,8 @@ war_for_california;Went to war over California;;;;;;;;;x
 mongolian_protectorate;Mongolia is our Protectorate;;;;;;;;;x
 build_the_manchurian_railway1;Manchurian Railway has been finished;;;;;;;;;x
 convention_of_peking;Convention of Peking has Happened;;;;;;;;;x
+byzantine_armenia;Reclaimed Armenia;;;;;;;;;x
+no_turks_in_anatolia;Reclaimed Anatolia;;;;;;;;;x
+byzantine_levant;Reclaimed Levant;;;;;;;;;x
+byzantine_egypt;Reclaimed Egypt;;;;;;;;;x
+byzantine_georgia;Reclaimed Caucasus;;;;;;;;;x
