--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -383,8 +383,8 @@ hedge_funds;Hedge Funds;;;;;;;;;;;;;x
 hedge_funds_desc;Hedge Funds;;;;;;;;;;;;;x
 federal_reserve_system;Market-Determined Exchange Rates ;;;;;;;;;;;;;x
 federal_reserve_system_desc;Market-Determined Exchange Rates;;;;;;;;;;;;;x
-inflation_targeting;Inflation targeting;;;;;;;;;;;;;x
-inflation_targeting_desc;Inflation targeting;;;;;;;;;;;;;x
+inflation_targeting;Inflation Targeting;;;;;;;;;;;;;x
+inflation_targeting_desc;Inflation Targeting;;;;;;;;;;;;;x
 marginalism;The Marginalism Revolution;;;;;;;;;;;;;x
 marginalism_desc;Marginalism;;;;;;;;;;;;;x
 armored_vehicles;Armored Vehicles;;;;;;;;;;;;;x
@@ -393,8 +393,8 @@ semi_auto_rifles;Semi Automatic Rifles;;;;;;;;;;;;;x
 semi_auto_rifles_desc;Semi Automatic Rifles;;;;;;;;;;;;;x
 early_aeronautics;Early Aeronautics;;;;;;;;;;;;;x
 early_aeronautics_desc;Early Aeronautics;;;;;;;;;;;;;x
-militar_culture;Militar Culture and Tradition;;;;;;;;;;;;;x
-militar_culture_desc;Militar Culture and Tradition;;;;;;;;;;;;;x
+militar_culture;Military Traditional and Culture;;;;;;;;;;;;;x
+militar_culture_desc;Military Traditional and Culture;;;;;;;;;;;;;x
 early_oil;Early Oil Ships;;;;;;;;;;;;;x
 early_oil_desc;Early Oil Ships;;;;;;;;;;;;;x
 network_centric_warfare;Network-Centric Warfare;;;;;;;;;;;;;x
