--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -4,7 +4,7 @@ frankenstein_desc;Frankenstein was a novel published by Mary Shelley in 1818. It
 ZOM;Infested Wasteland;;;;;;;;x;
 ZOM_ADJ;Infested;;;;;;;;x;
 undead;Undead;;;;;;;;x;
-zombie_rebels_army;The Walking Dead;;;;;;;;x;
+zombie_rebels_army;Army of The Dead;;;;;;;;x;
 zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facilities, namely motor function. In its nearly mindless state, it has no grasp of emotion, personality, or sensation. However, in rare cases, some zombies reflexively perform activities from their past lives. Their rotting bodies operate on a much lower level than a normal human. Circulatory, respiratory, and digestive systems are unaffected by reanimation. Labored breathing, choking, and moaning are therefore reflexive as no oxygen is carried through the blood. Furthermore, the nervous system functions primarily within the brain and sensory reception is minimal at best. The undead are incapable of fatigue and endlessly pursue their victims. Subsequently, a zombie may chase its victim even if it’s missing limbs. Therefore, the only way to kill a zombie is by destroying its brain. The only observable action a zombie takes part in is hunting and eating living organisms, especially humans. Approach with extreme caution.;;;;;;;;x;
 zombie_rebels_name;Zombies;;;;;;;;x;
 zombie_rebels_title;Zombie;;;;;;;;x; 
