--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -39,6 +39,7 @@ EVTNAME123456200;Zombies don't build countries;;;;;;;;x;
 EVTDESC123456200;Event to turn Zombieland into Terra Nullius;;;;;;;;x;
 EVTNAME123456201;Zombieland will soon be emptied;;;;;;;;x;
 EVTDESC123456201;This event stops Zombieland from getting more provinces, hence in about a month's time it will be turned into Terra Nullius;;;;;;;;x;
+ZOMBIETAKEOVER;What a disaster!;;;;;;;;x;
 do_not_annex;Zombieland received a province recently, so it should not be annexed for at least a month;;;;;;;;x;
 accepts_new_provinces;Zombieland will accept new provinces;;;;;;;;x;
 Z01;European Wasteland;;;;;;;;x;
