--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -9,36 +9,36 @@ zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facili
 zombie_rebels_name;Zombies;;;;;;;;x;
 zombie_rebels_title;Zombie;;;;;;;;x; 
 zombie_outbreak;Zombie Outbreak;;;;;;;;x;
-EVTNAME123456001;A Mysterious Plague...;;;;;;;;x;
-EVTDESC123456001;One of our ambassadors reports that a strange plague broke out in some remote location. Though nobody important really cares, there are some who claim this is a resurgence of the legendary Solomon Virus and a sign of the coming Rapture. A passage from Zechariah describes it as such: “This will be the plague the Lord strikes all people who warred against Jerusalem: their flesh shall rot while they stand on their feet, their eyes will rot in their sockets, and their tongues will rot in their mouths. On that day, a large-scale panic from the Lord will spread among them. One person will grab the hand of another, and one will attack the other.”;;;;;;;;x;
-EVTOPTA123456001;I'll be in the chapel.;;;;;;;;x;
-EVTNAME123456002;A Mysterious Plague...;;;;;;;;x;
-EVTDESC123456002;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;x;
-EVTOPTA123456002;Uh Oh.;;;;;;;;x;
-EVTNAME123456004;The Plague Spreads...;;;;;;;;x;
-EVTDESC123456004;"The natives tell of a sickness that darkens the soul, causing a thirst for the blood of their brothers. They tell of men, women, and even children whose flesh have become gray with rot and possess an unholy smell. Once darkened, there is no method of healing, save death, and that can only be achieved throughfire, since the body becomes resistant to all arms of man." This text was suspposedly taken from the accounts of Father Esteban Negron, 1523.;;;;;;;;x;
-EVTNAME123456014;The Purge of $PROVINCENAME$;;;;;;;;x;
-EVTDESC123456014;Castles and forts have proven effective in surviving the zombie apocalypses. Castles, found almost exclusively in the Old World, feature large physical barriers designed to keep out hordes of enemy soldiers. Meanwhile, old Spanish and Portuguese fortifications in the New Word and British and French bases in the Northern United States and Canada are low-maintenance and can withstand heavy siege. This combination of Old World strategy combined with new tactics and equiment allowed us to recapture $PROVINCENAME$.;;;;;;;;x;
-EVTNAME123456015;Victory in $COUNTRYNAME$!;;;;;;;;x;
-EVTDESC123456015;New tactics and equipment developed since the initial outbreak have helped suppress the zombie outbreak. Traditionally, our men were taught to shoot for the chest because it is the hardest to miss. Since the initial outbreak, they have been trained to shoot for the head and disable a zombie in one go. Likewise, the new Standard Infantry Rifle (SIR) has been developed as a more accurate and semi-automatic alternative to traditional muskets and rifles. On a unit-level, soldiers were taught to fire with mechanical precision and alternate with a partner: one soldier shoots while the other reloads. Effectively, the advent of repeating rifles and new military tactics have led us to ultimate victory against the zombie hordes.;;;;;;;;x;
-EVTNAME123456016;End the State of Emergency?;;;;;;;;x;
-EVTDESC123456016;Alongside the state of emergency came a classification system to measure the intensity of a zombie outbreak. Class One outbreaks, for example, occur in rural areas and experience minimal casualties. Class Two outbreaks, meanwhile, occur in urban areas, but can be suppressed by local authorities. Then, Class Three outbreaks present a clear threat to national security and require the regular military to suppress the outbreak. Fortunately, our military crushed the zombie outbreak at Class Three and prevented the breakdown of law, or a Class Four outbreak. While there are nations that teeter between Class Three and Four outbreaks, ours is only endangered by isolated Class One outbreaks. Therefore, your advisors have come and ask that you end the state of emergency. What shall we do?;;;;;;;;x;
-EVTNAME123456024;The Zombie Apocalypse;;;;;;;;x;
-EVTDESC123456024;Civilization has completely broken down, and law is no longer kept. Any densely populated area in the world has thousands of zombies walking the streets. The world’s population has been reduced to almost nothing, and the number of survivors has been limited to fewer than 500,000. The world leaders that haven’t already been slaughtered are hiding in bunkers, waiting to starve to death. To quote a contemporary biologist, “No help will come for anyone as the zombies slowly devour all life on the planet causing the end of humanity and eventually the end of all life on earth due to the rapid removal of so many creatures from the global ecosystem. After a time the zombies will all rot away leaving the earth an empty barren wasteland.”;;;;;;;;x;
-EVTNAME123456025;The Black Hole of $PROVINCENAME$;;;;;;;;x;
-EVTDESC123456025;$PROVINCENAME$ has recently fallen under zombie control, and neither the local government nor the military has been able to restore order. Since we are unable to maintain control over the area, our people and the international community deem it terra nullius. Future rehabitation will require extensive reconstruction and repopulation; we estimate that the province's human population is less than 20% of what it was in 1836, if not lower...;;;;;;;;x;
-EVTNAME123456026;State of Emergency!;;;;;;;;x;
-EVTDESC123456026;By declaring a state of emergency, we have suspended the normal functions of the executive, legislative, and judicial powers and handed extensive political control over to the military. As such, elections are suspended and we've pulled together emergency funds and resources to combat the zombie menace.;;;;;;;;x;
-EVTNAME123456027;Government Powers Restored!;;;;;;;;x;
-EVTDESC123456027;It is no longer necessary to allocate so much of our government's resources to the military. As such, we've restored the bureaucracy and returned power to the government proper. No longer shall our country be under military jurisdiction and its corrupt junta!;;;;;;;;x;
-EVTNAME123456028;The Zombies Are Back!;;;;;;;;x;
-EVTDESC123456028;We had cleared our country of zombies, but now they have crossed our border once more!;;;;;;;;x;
-EVTNAME123456101;Zombieland;;;;;;;;x;
-EVTDESC123456101;Parts of our country have recently fallen under zombie control, and neither the local government nor the military have been able to restore order. Since we are unable to maintain control over the area, our people and the international community have come to refer to it as 'Zombieland': A wasteland where all societal structure has collapsed and where zombies roam freely. Future rehabitation will require extensive reconstruction and repopulation; we estimate that the province's human population is less than 20% of what it was in 1836, if not lower...;;;;;;;;x;
-EVTNAME123456200;Zombies don't build countries;;;;;;;;x;
-EVTDESC123456200;Event to turn Zombieland into Terra Nullius;;;;;;;;x;
-EVTNAME123456201;Zombieland will soon be emptied;;;;;;;;x;
-EVTDESC123456201;This event stops Zombieland from getting more provinces, hence in about a month's time it will be turned into Terra Nullius;;;;;;;;x;
+EVTNAME66001;A Mysterious Plague...;;;;;;;;x;
+EVTDESC66001;One of our ambassadors reports that a strange plague broke out in some remote location. Though nobody important really cares, there are some who claim this is a resurgence of the legendary Solomon Virus and a sign of the coming Rapture. A passage from Zechariah describes it as such: “This will be the plague the Lord strikes all people who warred against Jerusalem: their flesh shall rot while they stand on their feet, their eyes will rot in their sockets, and their tongues will rot in their mouths. On that day, a large-scale panic from the Lord will spread among them. One person will grab the hand of another, and one will attack the other.”;;;;;;;;x;
+EVTOPTA66001;I'll be in the chapel.;;;;;;;;x;
+EVTNAME66002;A Mysterious Plague...;;;;;;;;x;
+EVTDESC66002;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;x;
+EVTOPTA66002;Uh Oh.;;;;;;;;x;
+EVTNAME66004;The Plague Spreads...;;;;;;;;x;
+EVTDESC66004;"The natives tell of a sickness that darkens the soul, causing a thirst for the blood of their brothers. They tell of men, women, and even children whose flesh have become gray with rot and possess an unholy smell. Once darkened, there is no method of healing, save death, and that can only be achieved throughfire, since the body becomes resistant to all arms of man." This text was suspposedly taken from the accounts of Father Esteban Negron, 1523.;;;;;;;;x;
+EVTNAME66014;The Purge of $PROVINCENAME$;;;;;;;;x;
+EVTDESC66014;Castles and forts have proven effective in surviving the zombie apocalypses. Castles, found almost exclusively in the Old World, feature large physical barriers designed to keep out hordes of enemy soldiers. Meanwhile, old Spanish and Portuguese fortifications in the New Word and British and French bases in the Northern United States and Canada are low-maintenance and can withstand heavy siege. This combination of Old World strategy combined with new tactics and equiment allowed us to recapture $PROVINCENAME$.;;;;;;;;x;
+EVTNAME66015;Victory in $COUNTRYNAME$!;;;;;;;;x;
+EVTDESC66015;New tactics and equipment developed since the initial outbreak have helped suppress the zombie outbreak. Traditionally, our men were taught to shoot for the chest because it is the hardest to miss. Since the initial outbreak, they have been trained to shoot for the head and disable a zombie in one go. Likewise, the new Standard Infantry Rifle (SIR) has been developed as a more accurate and semi-automatic alternative to traditional muskets and rifles. On a unit-level, soldiers were taught to fire with mechanical precision and alternate with a partner: one soldier shoots while the other reloads. Effectively, the advent of repeating rifles and new military tactics have led us to ultimate victory against the zombie hordes.;;;;;;;;x;
+EVTNAME66016;End the State of Emergency?;;;;;;;;x;
+EVTDESC66016;Alongside the state of emergency came a classification system to measure the intensity of a zombie outbreak. Class One outbreaks, for example, occur in rural areas and experience minimal casualties. Class Two outbreaks, meanwhile, occur in urban areas, but can be suppressed by local authorities. Then, Class Three outbreaks present a clear threat to national security and require the regular military to suppress the outbreak. Fortunately, our military crushed the zombie outbreak at Class Three and prevented the breakdown of law, or a Class Four outbreak. While there are nations that teeter between Class Three and Four outbreaks, ours is only endangered by isolated Class One outbreaks. Therefore, your advisors have come and ask that you end the state of emergency. What shall we do?;;;;;;;;x;
+EVTNAME66024;The Zombie Apocalypse;;;;;;;;x;
+EVTDESC66024;Civilization has completely broken down, and law is no longer kept. Any densely populated area in the world has thousands of zombies walking the streets. The world’s population has been reduced to almost nothing, and the number of survivors has been limited to fewer than 500,000. The world leaders that haven’t already been slaughtered are hiding in bunkers, waiting to starve to death. To quote a contemporary biologist, “No help will come for anyone as the zombies slowly devour all life on the planet causing the end of humanity and eventually the end of all life on earth due to the rapid removal of so many creatures from the global ecosystem. After a time the zombies will all rot away leaving the earth an empty barren wasteland.”;;;;;;;;x;
+EVTNAME66025;The Black Hole of $PROVINCENAME$;;;;;;;;x;
+EVTDESC66025;$PROVINCENAME$ has recently fallen under zombie control, and neither the local government nor the military has been able to restore order. Since we are unable to maintain control over the area, our people and the international community deem it terra nullius. Future rehabitation will require extensive reconstruction and repopulation; we estimate that the province's human population is less than 20% of what it was in 1836, if not lower...;;;;;;;;x;
+EVTNAME66026;State of Emergency!;;;;;;;;x;
+EVTDESC66026;By declaring a state of emergency, we have suspended the normal functions of the executive, legislative, and judicial powers and handed extensive political control over to the military. As such, elections are suspended and we've pulled together emergency funds and resources to combat the zombie menace.;;;;;;;;x;
+EVTNAME66027;Government Powers Restored!;;;;;;;;x;
+EVTDESC66027;It is no longer necessary to allocate so much of our government's resources to the military. As such, we've restored the bureaucracy and returned power to the government proper. No longer shall our country be under military jurisdiction and its corrupt junta!;;;;;;;;x;
+EVTNAME66028;The Zombies Are Back!;;;;;;;;x;
+EVTDESC66028;We had cleared our country of zombies, but now they have crossed our border once more!;;;;;;;;x;
+EVTNAME66101;Zombieland;;;;;;;;x;
+EVTDESC66101;Parts of our country have recently fallen under zombie control, and neither the local government nor the military have been able to restore order. Since we are unable to maintain control over the area, our people and the international community have come to refer to it as 'Zombieland': A wasteland where all societal structure has collapsed and where zombies roam freely. Future rehabitation will require extensive reconstruction and repopulation; we estimate that the province's human population is less than 20% of what it was in 1836, if not lower...;;;;;;;;x;
+EVTNAME66200;Zombies don't build countries;;;;;;;;x;
+EVTDESC66200;Event to turn Zombieland into Terra Nullius;;;;;;;;x;
+EVTNAME66201;Zombieland will soon be emptied;;;;;;;;x;
+EVTDESC66201;This event stops Zombieland from getting more provinces, hence in about a month's time it will be turned into Terra Nullius;;;;;;;;x;
 ZOMBIETAKEOVER;What a disaster!;;;;;;;;x;
 do_not_annex;Zombieland received a province recently, so it should not be annexed for at least a month;;;;;;;;x;
 accepts_new_provinces;Zombieland will accept new provinces;;;;;;;;x;
@@ -55,26 +55,33 @@ Z04_ADJ;Infested;;;;;;;;x;
 Z05_ADJ;Contaminated;;;;;;;;x;
 Z06_ADJ;Infected;;;;;;;;x;
 nogovernment;Wild wasteland;;;;;;;;x;
-noIdeology;None;;;;;;;;x;
+noIdeology;Wilderness;;;;;;;;x;
 noIssue;None;;;;;;;;x;
 ap_lock_down;Lockdown.;;;;;;;;x;
-ap_lock_down;Our borders are closed.;;;;;;;;x;
+ap_lock_down;Our borders are closed, while it's rindering our research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;x;
 ap_lock_down_title;Declare total lockdown!;;;;;;;;x;
 ap_lock_down_desc;We may declare Lockdown to avoid infected immigrants, but that would rinder our research capalabilities.;;;;;;;;x;
 ap_remove_lock_down_title;Remove lockdown policy.;;;;;;;;x;
 ap_remove_lock_down_desc;It's better if we open our borders.;;;;;;;;x;
 ap_state_of_emergency_title;Declare State of Emergency;;;;;;;;x; 
 ap_state_of_emergency_desc;By declaring a state of emergency, we have suspended the normal functions of the executive, legislative, and judicial powers and handed extensive political control over to the military. As such, elections are suspended and we've pulled together emergency funds and resources to combat the zombie menace.;;;;;;;;x;
-ap_state_of_emergency;State of Emergency;;;;;;;;x; 
+ap_state_of_emergency;State of Emergency;;;;;;;;x;
+ap_end_state_of_emergency_title;End the State of Emergency;;;;;;;;x;
+ap_end_state_of_emergency_desc;The State of Emergency is no longer needed, we can resume our countries normal activities and move on.;;;;;;;;x; 
 ap_sieze_assets;Sieze all assets!;;;;;;;;x;
 ap_sieze_assets_title;Sieze all assets!;;;;;;;;x;
 ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may sieze all the assets we can from the people. I'm sure they will understand...;;;;;;;;x;
-EVTNAME123456029;LOCKDOWN!;;;;;;;;x;
-EVTDESC123456029;We have decided to close our borders!;;;;;;;;x;
-EVTOPTA123456029;A worthy sacrifice.;;;;;;;;x;
-EVTNAME123456030;Reopening our borders.;;;;;;;;x;
-EVTDESC123456030;We have decided to open our borders!;;;;;;;;x;
-EVTOPTA123456030;Finally!;;;;;;;;x;
+EVTNAME66029;LOCKDOWN!;;;;;;;;x;
+EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;x;
+EVTOPTA66029;A worthy sacrifice.;;;;;;;;x;
+EVTNAME66030;Reopening our borders.;;;;;;;;x;
+EVTDESC66030;We can now open our borders again, hopefully this won't cause another outbreak.;;;;;;;;x;
+EVTOPTA66030;Finally!;;;;;;;;x;
+EVTNAME66033;Humanity prevailed.;;;;;;;;x;
+EVTDESC66033;After years of hardship, through a combination of military action, scientific research, and strategic planning, humanity was able to stem the spread of the virus and eliminate the infected. Now that the threat has been neutralized, we must turn our attention to rebuilding. Many towns and cities have been destroyed, and countless lives have been lost. We must focus on providing aid to the survivors, rebuilding infrastructure, and establishing new communities. Humanity once again prevailed, and it's once again time to rebuild.;;;;;;;;x;
+EVTOPTA66033;We must first tend to the ones who survived.;;;;;;;;x;
+EVTOPTB66033;Time to rebuild our nation, with calm and temperance!;;;;;;;;x;
+EVTOPTC66033;Spread our wings! The world is ours to inherit!;;;;;;;;x;
 
 
 
