--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -82,6 +82,10 @@ EVTDESC66033;After years of hardship, through a combination of military action, 
 EVTOPTA66033;We must first tend to the ones who survived.;;;;;;;;x;
 EVTOPTB66033;Time to rebuild our nation, with calm and temperance!;;;;;;;;x;
 EVTOPTC66033;Spread our wings! The world is ours to inherit!;;;;;;;;x;
+ap_rebuild_society;Rebuilding Society;;;;;;;;x;
+ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
+ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
+ap_agressive_rebuild;Agressive Rebuild;;;;;;;;x;
 
 
 
