--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -82,6 +82,10 @@ EVTDESC66033;After years of hardship, through a combination of military action, 
 EVTOPTA66033;We must first tend to the ones who survived.;;;;;;;;x;
 EVTOPTB66033;Time to rebuild our nation, with calm and temperance!;;;;;;;;x;
 EVTOPTC66033;Spread our wings! The world is ours to inherit!;;;;;;;;x;
+EVENTNAME66034;Defeat!;;;;;;;;x;
+EVENTDESC66034;Despite our best efforts, the last of our cities have now fallen to the zombie outbreak, and it is only a matter of time before the government itself is threatened. Our military forces have been overwhelmed by the sheer number of zombies, and our medical teams have been unable to find a cure or effective treatment. We have lost many of our citizens, including some of our most valued leaders and advisors. The situation is bleak and we must face the reality that there is nothing we can do to stop the outbreak at this point.;
+EVENTOPTA66034;We are going down with our ship as the men we are!;;;;;;;;x;
+EVENTOPTB66034;Reallocate the government to one of our allies or whoever is willing to take us in!;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
