--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -86,10 +86,20 @@ EVENTNAME66034;Defeat!;;;;;;;;x;
 EVENTDESC66034;Despite our best efforts, the last of our cities have now fallen to the zombie outbreak, and it is only a matter of time before the government itself is threatened. Our military forces have been overwhelmed by the sheer number of zombies, and our medical teams have been unable to find a cure or effective treatment. We have lost many of our citizens, including some of our most valued leaders and advisors. The situation is bleak and we must face the reality that there is nothing we can do to stop the outbreak at this point.;
 EVENTOPTA66034;We are going down with our ship as the men we are!;;;;;;;;x;
 EVENTOPTB66034;Reallocate the government to one of our allies or whoever is willing to take us in!;;;;;;;;x;
+EVENTNAME66035;State of Emergency...?;;;;;;;;x;
+EVENTDESC66035;Thanks to the valiant efforts of our citizens and the tireless work of our medical and military personnel, we have managed to overcome the zombie outbreak that threatened our kingdom. While the threat of the outbreak is not entirely gone, we have made significant progress in containing and eliminating the threat. The emergency measures that were put in place, such as curfews, travel restrictions, and the mobilization of military forces, were necessary at the time, but they are now no longer needed. Continuing the state of emergency unnecessarily would be detrimental to our country in several ways. It would hamper our economy, disrupt our citizens' daily lives, and strain our resources. Additionally, it would send a message of fear and uncertainty to our people, which could damage morale and confidence in our government.;;;;;;;;x;
+EVENTOPTA66035;It's time to go back to normal indeed;;;;;;;;x;
+EVENTOPTB66035;But what if they came back?!;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
 ap_agressive_rebuild;Agressive Rebuild;;;;;;;;x;
+ap_ruins;Ruined Country;;;;;;;;x;
+ap_ruins_desc;The country is in ruins, there's nothing to be done.;;;;;;;;x;
+ap_refuge;Refuge;;;;;;;;x;
+ap_refuge_desc;A safe heaven where we may rebuild.;;;;;;;;x;
+ap_state_of_emergency_abuse;Unnecessary State of Emergency;;;;;;;;x;
+ap_state_of_emergency_abuse_desc;Our people and advisors think the State of Emergency is no longer needed.;;;;;;;;x;
 
 
 
