Improved Refugee events

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -100,6 +100,8 @@ ap_refuge;Refuge;;;;;;;;x;
 ap_refuge_desc;A safe heaven where we may rebuild.;;;;;;;;x;
 ap_state_of_emergency_abuse;Unnecessary State of Emergency;;;;;;;;x;
 ap_state_of_emergency_abuse_desc;Our people and advisors think the State of Emergency is no longer needed.;;;;;;;;x;
+ap_pop_boom;Population Burst.;;;;;;;;x;
+ap_pop_boom_desc;People are quickly migrating.;;;;;;;;x;
 
 
 
