--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -171,6 +171,7 @@ AGRESSION_WAR_RESTORE_ORDER_NAME_SAR_GEN;The $ORDER$Genoese Revolt;;;;;;;;;;;;;x
 AGRESSION_WAR_RESTORE_ORDER_NAME_TUR_BHT;The $ORDER$Ottoman Intervention in Kurdistan;;;;;;;;;;;;;x
 AGRESSION_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;x
 AGRESSION_WAR_RHINE_CRISIS;The Rhine Crisis;;;;;;;;;;;;;x
+AGRESSION_WAR_MEXICO_CONCESSION_RUS;Russian Invasion of California;;;;;;;;;;;;;x
 AGRESSION_WAR_RUDEBOI_NAME;$ORDER$$FIRST$ War of $SECOND$ Containment;$ORDER$$FIRST$ guerre de confinement $SECOND$;$ORDER$$FIRST$ Krieg der $SECOND$ Beherrschung;;;;;;;;;;;x
 AGRESSION_WAR_SAHEL_JIHAD_NAME;$ORDER$$FIRST$ Jihad;;;;;;;;;;;;;x
 AGRESSION_WAR_SONDERBUND;The Sonderbund War;;;;;;;;;;;;;x
@@ -403,6 +404,7 @@ NORMAL_WAR_RESTORE_ORDER_NAME_TIG_SHW;Zemene Mesafint;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_TUR_BHT;The $ORDER$Ottoman Intervention in Kurdistan;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;x
 NORMAL_WAR_RHINE_CRISIS;The Rhine Crisis;;;;;;;;;;;;;x
+NORMAL_WAR_MEXICO_CONCESSION_RUS;Russian Invasion of California;;;;;;;;;;;;;x
 NORMAL_WAR_RUDEBOI_NAME;$ORDER$$FIRST$ War of $SECOND$ Containment;$ORDER$$FIRST$ guerre de confinement $SECOND$;$ORDER$$FIRST$ Krieg der $SECOND$ Beherrschung;;;;;;;;;;;x
 NORMAL_WAR_SAHEL_JIHAD_NAME;$ORDER$$FIRST$ Jihad;;;;;;;;;;;;;x
 NORMAL_WAR_SONDERBUND;The Sonderbund War;;;;;;;;;;;;;x
