Protocol of Chuguchak
- Bugfixed the odd chance somehow Russia gets Bishkek/Osha through puppets
- Moved some conditions around so Peking C. and P. of Chuguchak are more apparent

--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -59,6 +59,10 @@ war_for_california;Went to war over California;;;;;;;;;x
 mongolian_protectorate;Mongolia is our Protectorate;;;;;;;;;x
 build_the_manchurian_railway1;Manchurian Railway has been finished;;;;;;;;;x
 convention_of_peking;Convention of Peking has Happened;;;;;;;;;x
+peking_con;Peking Convention;;;;;;;;;x
+taiping_has_been_defeated;Taiping Rebellion Defeated;;;;;;;;;x
+arrow_incident;Arrow Incident has Happened;;;;;;;;;x
+ever_victorious_army;Ever Victorious Army;;;;;;;;;x
 byzantine_armenia;Reclaimed Armenia;;;;;;;;;x
 no_turks_in_anatolia;Reclaimed Anatolia;;;;;;;;;x
 byzantine_levant;Reclaimed Levant;;;;;;;;;x
