Loc, improved event pictures, delayed infection option

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -9,9 +9,10 @@ zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facili
 zombie_rebels_name;Zombies;;;;;;;;x;
 zombie_rebels_title;Zombie;;;;;;;;x; 
 zombie_outbreak;Zombie Outbreak;;;;;;;;x;
-EVTNAME66001;A Mysterious Plague...;;;;;;;;x;
-EVTDESC66001;One of our ambassadors reports that a strange plague broke out in some remote location. Though nobody important really cares, there are some who claim this is a resurgence of the legendary Solomon Virus and a sign of the coming Rapture. A passage from Zechariah describes it as such: “This will be the plague the Lord strikes all people who warred against Jerusalem: their flesh shall rot while they stand on their feet, their eyes will rot in their sockets, and their tongues will rot in their mouths. On that day, a large-scale panic from the Lord will spread among them. One person will grab the hand of another, and one will attack the other.”;;;;;;;;x;
-EVTOPTA66001;I'll be in the chapel.;;;;;;;;x;
+EVTNAME66001;New Archeological Discovery!;;;;;;;;x;
+EVTDESC66001;A private expedition of our country into Egypt has recently discovered a new ancient building buried deep beneath the desert sands. The main chamber appears to be filled with amazing artifacts and treasures that could shed new light on the ancient civilization of Egypt. While the locals have expressed concern about a cursed disease within the chamber, we should not let their superstitions and ignorance prevent us from accessing this valuable historical find. ;;;;;;;;x;
+EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection immediatly;;;;;;;;x;
+EVTOPTB66001;We shouldn't bother with this right now. §GDelay the infection for 10 years;;;;;;;;x;
 EVTNAME66002;A Mysterious Plague...;;;;;;;;x;
 EVTDESC66002;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;x;
 EVTOPTA66002;Uh Oh.;;;;;;;;x;
@@ -91,6 +92,10 @@ EVENTNAME66035;State of Emergency...?;;;;;;;;x;
 EVENTDESC66035;Thanks to the valiant efforts of our citizens and the tireless work of our medical and military personnel, we have managed to overcome the zombie outbreak that threatened our kingdom. While the threat of the outbreak is not entirely gone, we have made significant progress in containing and eliminating the threat. The emergency measures that were put in place, such as curfews, travel restrictions, and the mobilization of military forces, were necessary at the time, but they are now no longer needed. Continuing the state of emergency unnecessarily would be detrimental to our country in several ways. It would hamper our economy, disrupt our citizens' daily lives, and strain our resources. Additionally, it would send a message of fear and uncertainty to our people, which could damage morale and confidence in our government.;;;;;;;;x;
 EVENTOPTA66035;It's time to go back to normal indeed;;;;;;;;x;
 EVENTOPTB66035;But what if they came back?!;;;;;;;;x;
+EVENTNAME66036;The Conquest of the Wasteland;;;;;;;;x;
+EVENTDESC66036;Now that we have secured our borders and ensured the safety of our citizens, it is time for us to expand our territory and reclaim the land that was lost during the outbreak. There is an empty space of wasteland near us that was once inhabited by human settlements. These settlements were overrun by the zombies and had to be abandoned, but with the threat now neutralized, we have the opportunity to reclaim this land and rebuild our nation.;;;;;;;;x;
+EVENTOPTA66036;Onwards! Conquer the land!;;;;;;;;x;
+EVENTOPTB66036;It's better if we stay safe inside.;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
