Conquest of the wasteland added

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -96,6 +96,9 @@ EVENTNAME66036;The Conquest of the Wasteland;;;;;;;;x;
 EVENTDESC66036;Now that we have secured our borders and ensured the safety of our citizens, it is time for us to expand our territory and reclaim the land that was lost during the outbreak. There is an empty space of wasteland near us that was once inhabited by human settlements. These settlements were overrun by the zombies and had to be abandoned, but with the threat now neutralized, we have the opportunity to reclaim this land and rebuild our nation.;;;;;;;;x;
 EVENTOPTA66036;Onwards! Conquer the land!;;;;;;;;x;
 EVENTOPTB66036;It's better if we stay safe inside.;;;;;;;;x;
+EVENTNAME66037;Expedition into the Wasteland;;;;;;;;x;
+EVENTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;x;
+EVENTOPTA66037;Great!;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
@@ -108,6 +111,9 @@ ap_state_of_emergency_abuse;Unnecessary State of Emergency;;;;;;;;x;
 ap_state_of_emergency_abuse_desc;Our people and advisors think the State of Emergency is no longer needed.;;;;;;;;x;
 ap_pop_boom;Population Burst.;;;;;;;;x;
 ap_pop_boom_desc;People are quickly migrating.;;;;;;;;x;
+ap_expedition;Preparing an Expedition.;;;;;;;;x;
+ap_expedition_desc;This province will be the point of departure of an expedition into the Wasteland.;;;;;;;;x;
+
 
 
 
