Many many adjusts

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -72,6 +72,9 @@ ap_end_state_of_emergency_desc;The State of Emergency is no longer needed, we ca
 ap_sieze_assets;Sieze all assets!;;;;;;;;x;
 ap_sieze_assets_title;Sieze all assets!;;;;;;;;x;
 ap_sieze_assets_desc;The government must do whatever it takes to ensure our country's survival! In that time of despair, we may sieze all the assets we can from the people. I'm sure they will understand...;;;;;;;;x;
+ap_scouts_title;Scout for new land;;;;;;;;x;
+ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker be able to resettle faster.;;;;;;;;x;
+scouts_activated;Scouting for new land;;;;;;;;x;
 EVTNAME66029;LOCKDOWN!;;;;;;;;x;
 EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;x;
 EVTOPTA66029;A worthy sacrifice.;;;;;;;;x;
