Loc fixes and goldrush bandaid fix

--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1554,7 +1554,7 @@ EVTNAME98231;Orange River Convention;;;;;;;;;;;;;x
 EVTDESC98235;Migrants have been moving in large numbers through our African colonies on their way to the newly incorporated town of ‘Johannesburg’, on the edge of the Witwatersrand mountains, where a major gold rush is taking place. The massive influx of foreign residents to the area is causing trouble along our borders and friction between our governments.;;;;;;;;;;;;;x
 EVTNAME98235;Witwatersrand Gold Rush;;;;;;;;;;;;;x;;;;
 EVTOPTA98235;They are proving to be a nuisance.;;;;;;;;;;;;;x
-EVTDESC98236;Gold has been discovered in the Kimberley province, leading to claims from both the Transvaal and Oranje governments that the region rightfully belongs to them. Mediation by the colonial government has led to Kimberley being awarded to the griquasâ€”who have subsequently consented to annexation by $COUNTRY$. This has led to considerable bad blood between the Boer and $COUNTRY_ADJ$ governments.;;;;;;;;;;;;;x
+EVTDESC98236;Gold has been discovered in the Kimberley province, leading to claims from both the Transvaal and Oranje governments that the region rightfully belongs to them. Mediation by the colonial government has led to Kimberley being awarded to the griquas who have subsequently consented to annexation by $COUNTRY$. This has led to considerable bad blood between the Boer and $COUNTRY_ADJ$ governments.;;;;;;;;;;;;;x
 EVTNAME98236;Kimberley Gold Rush;;;;;;;;;;;;;x
 EVTDESC98240;The time has come to consider joining the South African union.;;;;;;;;;;;;;x
 EVTNAME98240;The South African Union;;;;;;;;;;;;;x
