--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2250,6 +2250,8 @@ FRA_absolute_monarchy;Empire Français;x;
 FRA_prussian_constitutionalism;Empire Français;x;
 FRA_hms_government;Empire Français;x;
 FRA_hms_government2;Royaume de France;x;
+FRA_prussian_constitutionalism2;Royaume de Français;x;
+FRA_absolute_monarchy2;Royaume de France;x;
 FRA_democracy;République Française;x;
 FRA_proletarian_dictatorship;République Communiste de France;x;
 FRA_presidential_dictatorship;République Française;x;
