--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -13,6 +13,7 @@ EVTNAME66001;New Archeological Discovery!;;;;;;;;x;
 EVTDESC66001;A private expedition of our country into Egypt has recently discovered a new ancient building buried deep beneath the desert sands. The main chamber appears to be filled with amazing artifacts and treasures that could shed new light on the ancient civilization of Egypt. While the locals have expressed concern about a cursed disease within the chamber, we should not let their superstitions and ignorance prevent us from accessing this valuable historical find. ;;;;;;;;x;
 EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection immediatly;;;;;;;;x;
 EVTOPTB66001;We shouldn't bother with this right now. §GDelay the infection for 10 years;;;;;;;;x;
+EVTOPTC66001;I want some of those artifacts as diplay in my office! §BStart Plague Inc Mode;;;;;;;;x;
 EVTNAME66002;A Mysterious Plague...;;;;;;;;x;
 EVTDESC66002;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;x;
 EVTOPTA66002;Uh Oh.;;;;;;;;x;
@@ -116,6 +117,8 @@ ap_pop_boom;Population Burst.;;;;;;;;x;
 ap_pop_boom_desc;People are quickly migrating.;;;;;;;;x;
 ap_expedition;Preparing an Expedition.;;;;;;;;x;
 ap_expedition_desc;This province will be the point of departure of an expedition into the Wasteland.;;;;;;;;x;
+do_not_annex;The Wasteland Expand!;;;;;;;;x;
+do_not_annex_desc;The wasteland Expands!;;;;;;;;x;
 
 
 
