--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -119,6 +119,8 @@ ap_expedition;Preparing an Expedition.;;;;;;;;x;
 ap_expedition_desc;This province will be the point of departure of an expedition into the Wasteland.;;;;;;;;x;
 do_not_annex;The Wasteland Expand!;;;;;;;;x;
 do_not_annex_desc;The wasteland Expands!;;;;;;;;x;
+ap_plague_inc;Herald of the Wasteland;;;;;;;;x;
+ap_plague_inc_desc;A harbinger of doom, a messenger of decay and desolation. Its very presence signals the end of life as we know it, and the arrival of an age of barrenness and desolation. ;;;;;;;;x;
 
 
 
